k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeserver
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: timeserver-pod
  template:
    metadata:
      labels:
        pod: timeserver-pod
    spec:
      containers:
      - name: timeserver-container
        image: timeserver:v4
        imagePullPolicy: Never
