k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeserver
  namespace: default
spec:
  selector:
    pod: timeserver-pod
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: LoadBalancer
